Fix chrome options issue